Add other link to HMI

--- a/src/pages/projects.json
+++ b/src/pages/projects.json
@@ -145,6 +145,10 @@
             {
                 "type": "github",
                 "href": "https://github.com/ChauLe19/MDE_HMI"
+            },
+            {
+                "type": "other",
+                "href": "https://drive.google.com/drive/folders/1q99sy8FKa-cek-ru9-l4SW7cSXrMMinq?usp=sharing"
             }
         ],
         "image": "MDE_HMI.png",
