Fixed styling for link and add image & download icon instead of using other

--- a/src/pages/other-projects.json
+++ b/src/pages/other-projects.json
@@ -15,7 +15,7 @@
         "name": "Gravity Falls Theme",
         "links": [
             {
-                "type": "other",
+                "type": "image",
                 "href": "https://drive.google.com/drive/u/1/folders/1xcoGNNIxO7uk7xt2SB99Mq2YyfcIvlBE"
             }
         ],
