Changed CalCheck external website

--- a/src/pages/projects.json
+++ b/src/pages/projects.json
@@ -45,7 +45,7 @@
             },
             {
                 "type": "other",
-                "href": "https://calcheck.onrender.com"
+                "href": "https://calcheck-2-6a12e6f6d8ce.herokuapp.com"
             }
         ],
         "image": "CalCheck.png",
